--- a/index.htm
+++ b/index.htm
@@ -6,24 +6,44 @@
     <title>Add Item</title>
     <link href="dashboard.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="jumbotron.css" rel="stylesheet">
     <link rel="stylesheet" href="css/custom.css">
+</head>
 
 <body>
-
-<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+<!-- navigation bar set up -->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid ">
-        <a href="#" class="navbar-brand">A food company</a>
+        <div class="navbar-header">
+            <a href="#" class="navbar-brand">Go Eat</a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" >
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Settings</a></li>
-                <li><a href="#">Profile</a></li>
                 <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </div>
-
     </div>
 </nav>
+
+<!-- Main jumbotron for a primary message-->
+<div class="jumbotron">
+    <div class="container" style="margin-top: 30px">
+        <h1>Go Eat</h1>
+        <p>"Go Eat" is an online food ordering service. Customers are able to browse the menu, place orders at
+            their table and then settle their bill all from within the app... saving time for everyone. </p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+    </div>
+</div>
+
+
 
 
 
@@ -31,4 +51,3 @@
 <script src="js/bootstrap.js"></script>
 
 </body>
-</head>
