--- a/index.htm
+++ b/index.htm
@@ -3,10 +3,11 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Add Item</title>
-    <link href="dashboard.css" rel="stylesheet">
+    <title>Home</title>
+
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href="jumbotron.css" rel="stylesheet">
+    <link href="css/jumbotron.css" rel="stylesheet">
     <link rel="stylesheet" href="css/custom.css">
 </head>
 
@@ -24,8 +25,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Dashboard</a></li>
+                <li class="active"><a href="index.htm">Home</a></li>
+                <li><a href="dashboard.html">Dashboard</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
@@ -35,7 +36,7 @@
 
 <!-- Main jumbotron for a primary message-->
 <div class="jumbotron">
-    <div class="container" style="margin-top: 30px">
+    <div class="container">
         <h1>Go Eat</h1>
         <p>"Go Eat" is an online food ordering service. Customers are able to browse the menu, place orders at
             their table and then settle their bill all from within the app... saving time for everyone. </p>
