--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
 
     <link href="css/simple-sidebar.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href="jumbotron.css" rel="stylesheet">
+    <link href="css/jumbotron.css" rel="stylesheet">
     <link rel="stylesheet" href="css/custom.css">
 </head>
 
@@ -39,17 +39,20 @@
         </div>
     </div>
 </nav>
+
 <!-- /#wrapper -->
 <div id="wrapper">
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <li class="sidebar-brand">
-                <a href="#">Start Bootstrap</a>
+                <a href="#">Admin Panel</a>
             </li>
-            <li class="active"><a href="#">Overview</a></li>
-            <li><a href="scripts/add-item.php">Add Menu Item</a></li>
-</ul>
+
+            <li class="active"><a href="dashboard.html">Overview</a></li>
+            <li><a href="add-item.php">Add Menu Item</a></li>
+            <li><a href="menu.php">View Menu</a></li>
+        </ul>
     </div>
 
     <!-- /#sidebar-wrapper -->
