--- a/index.htm
+++ b/index.htm
@@ -29,8 +29,8 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="index.htm">Home</a></li>
                 <li><a href="dashboard.php">Dashboard</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -42,7 +42,7 @@
         <h1>Go Eat</h1>
         <p>"Go Eat" is an online food ordering service. Customers are able to browse the menu, place orders at
             their table and then settle their bill all from within the app... saving time for everyone. </p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="about.html" role="button">Learn more &raquo;</a></p>
     </div>
 </div>
 
